[metadata]
name = dp-compendium
version = 0.1.0
description = Dynamic Programming Compendium
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
license = MIT

[options]
packages = find:
python_requires = >=3.8
install_requires =
    rich>=13.0

[options.extras_require]
dev =
    pytest
    jupyter
    matplotlib
